--- a/MP2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MP2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -101,15 +101,16 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/MyLevel
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/BP_Gameover.BP_Gameover
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Mortar.Mortar
+OpenAssetsAtExit=/Game/Ball.Ball
+OpenAssetsAtExit=/Game/Explosion.Explosion
+OpenAssetsAtExit=/Game/Thwomp.Thwomp
 OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter
-OpenAssetsAtExit=/Game/BP_health.BP_health
-OpenAssetsAtExit=/Game/Hour_of_Code/Widgets/W_HUD.W_HUD
-OpenAssetsAtExit=/Game/BP_scorer.BP_scorer
-OpenAssetsAtExit=/Game/Pursuer_AIController.Pursuer_AIController
 OpenAssetsAtExit=/Game/BP_Pursuer.BP_Pursuer
-OpenAssetsAtExit=/Game/EAIState.EAIState
+OpenAssetsAtExit=/Game/BP_scorer.BP_scorer
+OpenAssetsAtExit=/Game/BP_Gameover.BP_Gameover
+OpenAssetsAtExit=/Game/winner.winner
 
 [MRU]
 MRUItem0=/Game/MyLevel
@@ -156,29 +157,47 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
+AssetDialog.ThumbnailSize=2
+AssetDialog.CurrentViewType=1
 
 [PluginBrowser]
 InstalledPlugins=WMFCodecs
 
 [ContentBrowserRecent]
-MRUItem0=/Game/EAIState
-MRUItem1=/Game/BP_Pursuer
-MRUItem2=/Game/Pursuer_AIController
+MRUItem0=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem1=/Game/winner
+MRUItem2=/Game/BP_Gameover
 MRUItem3=/Game/BP_scorer
-MRUItem4=/Game/Hour_of_Code/Widgets/W_HUD
-MRUItem5=/Game/BP_health
+MRUItem4=/Game/LearningKit_Robots/Blueprints/WorldBuilding/BP_Ball_Football
+MRUItem5=/Game/Thwomp
 MRUItem6=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
-MRUItem7=/Game/BP_Gameover
-MRUItem8=/Game/MyLevel
-MRUItem9=/Game/LearningKit_Games/Maps/LearningKit_Games_Showcase
+MRUItem7=/Game/BP_Pursuer
+MRUItem8=/Game/Redmat
+MRUItem9=/Game/Red
+MRUItem10=/Game/Explosion
+MRUItem11=/Game/Ball
+MRUItem12=/Game/LearningKit_Robots/Blueprints/WorldBuilding/BP_Ball_Beach
+MRUItem13=/Game/Mortar
+MRUItem14=/Game/LearningKit_Robots/Blueprints/WorldBuilding/BP_Obstacle_Barrel_2
+MRUItem15=/Game/MyLevel
+MRUItem16=/Game/EAIState
+MRUItem17=/Game/Pursuer_AIController
+MRUItem18=/Game/Hour_of_Code/Widgets/W_HUD
+MRUItem19=/Game/BP_health
 
 [PlacementMode]
-RecentlyPlaced=/Game/LearningKit_Games/Assets/Architecture/Walls/SM_Kit_Wall_Straight.SM_Kit_Wall_Straight;
+RecentlyPlaced=/Game/BP_scorer.BP_scorer;
 RecentlyPlaced=/Game/BP_health.BP_health;
+RecentlyPlaced=/Game/winner.winner;
+RecentlyPlaced=/Game/BP_Pursuer.BP_Pursuer;
+RecentlyPlaced=/Game/Mortar.Mortar;
+RecentlyPlaced=/Game/Thwomp.Thwomp;
+RecentlyPlaced=/Game/LearningKit_Games/Assets/Architecture/Walls/SM_Kit_Wall_Straight.SM_Kit_Wall_Straight;
+RecentlyPlaced=/Game/Hour_of_Code/Static_Meshes/SM_Platform_M.SM_Platform_M;
+RecentlyPlaced=/Game/LearningKit_Games/Assets/Architecture/Ramps/SM_Kit_Ramp.SM_Kit_Ramp;
+RecentlyPlaced=/Game/LearningKit_Robots/Blueprints/WorldBuilding/BP_Obstacle_Barrel_2.BP_Obstacle_Barrel_2;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Script/NavigationSystem.NavModifierVolume;/Engine/Transient.ActorFactoryBoxVolume_1
-RecentlyPlaced=/Game/BP_Pursuer.BP_Pursuer;
-RecentlyPlaced=/Game/BP_scorer.BP_scorer;
 RecentlyPlaced=/Game/LearningKit_Games/Assets/Environment/Islands/SM_FloatingIsland_M.SM_FloatingIsland_M;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter;
@@ -624,6 +643,180 @@ CapsuleComponent.Tags=True
 CapsuleComponent.ComponentReplication=True
 CapsuleComponent.Cooking=True
 CapsuleComponent.Events=True
+BP_Obstacle_Barrel_2_C.Tick=True
+BP_Obstacle_Barrel_2_C.Replication=True
+BP_Obstacle_Barrel_2_C.Rendering=True
+BP_Obstacle_Barrel_2_C.Collision=True
+BP_Obstacle_Barrel_2_C.Actor=True
+BP_Obstacle_Barrel_2_C.Input=True
+BP_Obstacle_Barrel_2_C.HLOD=True
+BP_Obstacle_Barrel_2_C.Physics=True
+BP_Obstacle_Barrel_2_C.WorldPartition=True
+BP_Obstacle_Barrel_2_C.Events=True
+BP_Obstacle_Barrel_2_C.TransformCommon=True
+BP_Obstacle_Barrel_2_C.Networking=True
+Mortar_C.Tick=True
+Mortar_C.Replication=True
+Mortar_C.Rendering=True
+Mortar_C.Collision=True
+Mortar_C.Actor=True
+Mortar_C.Input=True
+Mortar_C.HLOD=True
+Mortar_C.Physics=True
+Mortar_C.WorldPartition=True
+Mortar_C.Events=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+Mortar_C.TransformCommon=True
+Mortar_C.Networking=True
+BP_Ball_Beach_C.Default=True
+BP_Ball_Beach_C.Tick=True
+BP_Ball_Beach_C.Replication=True
+BP_Ball_Beach_C.Rendering=True
+BP_Ball_Beach_C.Collision=True
+BP_Ball_Beach_C.Actor=True
+BP_Ball_Beach_C.Input=True
+BP_Ball_Beach_C.HLOD=True
+BP_Ball_Beach_C.Physics=True
+BP_Ball_Beach_C.WorldPartition=True
+BP_Ball_Beach_C.Events=True
+Ball_C.Tick=True
+Ball_C.Replication=True
+Ball_C.Rendering=True
+Ball_C.Collision=True
+Ball_C.Actor=True
+Ball_C.Input=True
+Ball_C.HLOD=True
+Ball_C.Physics=True
+Ball_C.WorldPartition=True
+Ball_C.Events=True
+ProjectileMovementComponent.Variable=True
+ProjectileMovementComponent.Sockets=True
+ProjectileMovementComponent.Projectile=True
+ProjectileMovementComponent.ProjectileBounces=True
+ProjectileMovementComponent.ProjectileSimulation=True
+ProjectileMovementComponent.ComponentTick=True
+ProjectileMovementComponent.Homing=True
+ProjectileMovementComponent.ProjectileInterpolation=True
+ProjectileMovementComponent.Velocity=True
+ProjectileMovementComponent.PlanarMovement=True
+ProjectileMovementComponent.MovementComponent=True
+ProjectileMovementComponent.Tags=True
+ProjectileMovementComponent.ComponentReplication=True
+ProjectileMovementComponent.Activation=True
+ProjectileMovementComponent.Cooking=True
+ProjectileMovementComponent.Events=True
+Explosion_C.Tick=True
+Explosion_C.Replication=True
+Explosion_C.Rendering=True
+Explosion_C.Collision=True
+Explosion_C.Actor=True
+Explosion_C.Input=True
+Explosion_C.HLOD=True
+Explosion_C.Physics=True
+Explosion_C.WorldPartition=True
+Explosion_C.Events=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Nanite=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.WorldPositionOffset=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Imports=True
+Blueprint.Interfaces=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.HLOD=True
+BoxComponent.ComponentTick=True
+BoxComponent.Rendering=True
+BoxComponent.PathTracing=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.HLOD=True
+SphereComponent.ComponentTick=True
+SphereComponent.Rendering=True
+SphereComponent.PathTracing=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+Thwomp_C.Tick=True
+Thwomp_C.Replication=True
+Thwomp_C.Rendering=True
+Thwomp_C.Collision=True
+Thwomp_C.Actor=True
+Thwomp_C.Input=True
+Thwomp_C.HLOD=True
+Thwomp_C.Physics=True
+Thwomp_C.WorldPartition=True
+Thwomp_C.Events=True
+BP_Ball_Football_C.Default=True
+BP_Ball_Football_C.Tick=True
+BP_Ball_Football_C.Replication=True
+BP_Ball_Football_C.Rendering=True
+BP_Ball_Football_C.Collision=True
+BP_Ball_Football_C.Actor=True
+BP_Ball_Football_C.Input=True
+BP_Ball_Football_C.HLOD=True
+BP_Ball_Football_C.Physics=True
+BP_Ball_Football_C.WorldPartition=True
+BP_Ball_Football_C.Events=True
+Thwomp_C.TransformCommon=True
+Thwomp_C.Networking=True
+Thwomp_C.Default=True
+K2Node_SwitchInteger.PinOptions=True
+winner_C.TransformCommon=True
+winner_C.Rendering=True
+winner_C.Replication=True
+winner_C.Collision=True
+winner_C.HLOD=True
+winner_C.Physics=True
+winner_C.Networking=True
+winner_C.Input=True
+winner_C.Actor=True
+winner_C.Tick=True
+winner_C.WorldPartition=True
+winner_C.Events=True
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -771,6 +964,13 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BP_Pursuer_C=
 Character=
 Pawn=
+ProjectileMovementComponent="\"Object.Velocity.Velocity\" "
+MovementComponent="\"Object.Velocity.Velocity\" "
+ActorComponent=
+StaticMeshComponent=
+MeshComponent=
+PrimitiveComponent=
+SceneComponent=
 
 [MessageLog]
 LastLogListing=PIE
@@ -791,6 +991,11 @@ UserDefinedEnum.Enumerators=True
 /Game/Pursuer_AIController.Pursuer_AIController=1
 /Game/BP_Pursuer.BP_Pursuer=1
 /Game/EAIState.EAIState=1
+/Game/LearningKit_Robots/Blueprints/WorldBuilding/BP_Obstacle_Barrel_2.BP_Obstacle_Barrel_2=1
+/Game/LearningKit_Robots/Blueprints/WorldBuilding/BP_Ball_Beach.BP_Ball_Beach=1
+/Engine/BasicShapes/BasicShapeMaterial.BasicShapeMaterial=1
+/Game/Redmat.Redmat=1
+/Game/LearningKit_Robots/Blueprints/WorldBuilding/BP_Ball_Football.BP_Ball_Football=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1878,4 +2083,173 @@ HierarchicalLODUtilities.LastCompileMethod=Unknown
 [Python]
 LastDirectory=
 RecentsFiles=D:/Programs/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bPlatformUsed[49]=0
+bPlatformUsed[50]=0
+bPlatformUsed[51]=0
+bPlatformUsed[52]=0
+bPlatformUsed[53]=0
+bPlatformUsed[54]=0
+bPlatformUsed[55]=0
+bPlatformUsed[56]=0
+bPlatformUsed[57]=0
+bPlatformUsed[58]=0
+bPlatformUsed[59]=0
+bPlatformUsed[60]=0
+bPlatformUsed[61]=0
+bPlatformUsed[62]=0
+bPlatformUsed[63]=0
+bPlatformUsed[64]=0
+bPlatformUsed[65]=0
+bPlatformUsed[66]=0
+bPlatformUsed[67]=0
+bPlatformUsed[68]=0
+bPlatformUsed[69]=0
+bPlatformUsed[70]=0
+bPlatformUsed[71]=0
+bPlatformUsed[72]=0
+bPlatformUsed[73]=0
+bPlatformUsed[74]=0
+bPlatformUsed[75]=0
+bPlatformUsed[76]=0
+bPlatformUsed[77]=0
+bPlatformUsed[78]=0
+bPlatformUsed[79]=0
+bPlatformUsed[80]=0
+bPlatformUsed[81]=0
+bPlatformUsed[82]=0
+bPlatformUsed[83]=0
+bPlatformUsed[84]=0
+bPlatformUsed[85]=0
+bPlatformUsed[86]=0
+bPlatformUsed[87]=0
+bPlatformUsed[88]=0
+bPlatformUsed[89]=0
+bPlatformUsed[90]=0
+bPlatformUsed[91]=0
+bPlatformUsed[92]=0
+bPlatformUsed[93]=0
+bPlatformUsed[94]=0
+bPlatformUsed[95]=0
+bPlatformUsed[96]=0
+bPlatformUsed[97]=0
+bPlatformUsed[98]=0
+bPlatformUsed[99]=0
+bPlatformUsed[100]=0
+bPlatformUsed[101]=0
+bPlatformUsed[102]=0
+bPlatformUsed[103]=0
+bPlatformUsed[104]=0
+bPlatformUsed[105]=0
+bPlatformUsed[106]=0
+bPlatformUsed[107]=0
+bPlatformUsed[108]=0
+bPlatformUsed[109]=0
+bPlatformUsed[110]=0
+bPlatformUsed[111]=0
+bPlatformUsed[112]=0
+bPlatformUsed[113]=0
+bPlatformUsed[114]=0
+bPlatformUsed[115]=0
+bPlatformUsed[116]=0
+bPlatformUsed[117]=0
+bPlatformUsed[118]=0
+bPlatformUsed[119]=0
+bPlatformUsed[120]=0
+bPlatformUsed[121]=0
+bPlatformUsed[122]=0
+bPlatformUsed[123]=0
+bPlatformUsed[124]=0
+bPlatformUsed[125]=0
+bPlatformUsed[126]=0
+bPlatformUsed[127]=0
+bPlatformUsed[128]=0
+bPlatformUsed[129]=0
+bPlatformUsed[130]=0
+bPlatformUsed[131]=0
+bPlatformUsed[132]=0
+bPlatformUsed[133]=0
+bPlatformUsed[134]=0
+bPlatformUsed[135]=0
+bPlatformUsed[136]=0
+bPlatformUsed[137]=0
+bPlatformUsed[138]=0
+bPlatformUsed[139]=0
+bPlatformUsed[140]=0
+bPlatformUsed[141]=0
+bPlatformUsed[142]=0
+bPlatformUsed[143]=0
+bPlatformUsed[144]=0
+bPlatformUsed[145]=0
+bPlatformUsed[146]=0
+bPlatformUsed[147]=0
+bPlatformUsed[148]=0
+bPlatformUsed[149]=0
+bPlatformUsed[150]=0
+bPlatformUsed[151]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
+
+[SuppressableDialogs]
+DeleteComponentInUse_Warning=False
+ChangeVariableType_Warning=False
 
